--- a/public/styles.css
+++ b/public/styles.css
@@ -1,6 +1,74 @@
+* {
+  margin: 0;
+  font-family: "Roboto", sans-serif;
+}
+
 body {
   background-color: #1c1c1c;
   color: #fff;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+  padding: 3%;
+}
+.container .chat-window {
+  border-radius: 20px;
+  border: 1px solid #383838;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  height: 550px;
+  width: 50%;
+  max-width: 450px;
+  min-width: 300px;
+  padding: 20px;
+  overflow-y: scroll;
+}
+.container .input-shell {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+.container .input-shell input {
+  padding: 10px 15px;
+  border-radius: 100px;
+  border: none;
+}
+.container .message-shell {
+  display: flex;
+}
+.container .message-shell .message {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border-radius: 15px;
+  background-color: #ffffff;
+  padding: 15px;
+  max-width: 50%;
+  gap: 5px;
+  color: #1c1c1c;
+}
+.container .message-shell .message .saldo {
+  font-weight: 600;
+}
+.container .message-shell .message--blue {
+  background-color: dodgerblue;
+  color: #fff;
+}
+.container .message-shell .message--error {
+  background-color: #cc3b3b;
+  color: #fff;
+}
+.container .message-shell .message--green {
+  background-color: #68be45;
+  color: #fff;
+}
+.container .message--mine {
+  justify-content: end;
 }
 
 /*# sourceMappingURL=styles.css.map */
