--- a/public/styles.sass
+++ b/public/styles.sass
@@ -1,3 +1,68 @@
+*
+    margin: 0
+    font-family: "Roboto", sans-serif
+
 body
     background-color: #1c1c1c
     color: #fff
+
+.container
+    display: flex
+    flex-direction: column
+    align-items: center
+    gap: 20px
+    padding: 3%
+
+    .chat-window
+        border-radius: 20px
+        border: 1px solid #383838
+        display: flex
+        flex-direction: column
+        gap: 20px
+        height: 550px
+        width: 50%
+        max-width: 450px
+        min-width: 300px
+        padding: 20px
+        overflow-y: scroll
+
+    .input-shell
+        display: flex
+        align-items: center
+        gap: 10px
+
+        input
+            padding: 10px 15px
+            border-radius: 100px
+            border: none
+
+    .message-shell
+        display: flex
+
+        .message
+            display: flex
+            //flex-direction: column
+            align-items: center
+            justify-content: space-between
+            border-radius: 15px
+            background-color: #ffffff
+            padding: 15px
+            max-width: 50%
+            gap: 5px
+            color: #1c1c1c
+
+            .saldo
+                font-weight: 600
+
+        .message--blue
+            background-color: dodgerblue
+            color: #fff
+        .message--error
+            background-color: #cc3b3b
+            color: #fff
+        .message--green
+            background-color: #68be45
+            color: #fff
+
+    .message--mine
+        justify-content: end
