--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,15 +5,106 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles.css">
     <title>Document</title>
 </head>
 <body>
-    <p><%= data %></p>
+    <div class="container">
+        <p class="user-count"></p>
+        <h1>Корпоративний Чат</h1>
+        <div class="chat-window"></div>
 
+        <form id="input-field" method="POST" action="/push-message">
+            <div class="input-shell">
+                <span>Введіть ІПН:</span>
+                <input>
+            </div>
+        </form>
+    </div>
 
+    <script src="/socket.io/socket.io.js"></script>
     <script>
-		console.log(true);
+		const socket = io();
+
+		const chatWindow = document.querySelector('.chat-window');
+		const form = document.getElementById('input-field');
+		const input = form.querySelector('input');
+
+		form.addEventListener('submit', (e) => {
+			e.preventDefault();
+			if (input.value) {
+				socket.emit('message', {
+					ipn: input.value
+				});
+				mineMessageRender(input.value);
+				input.value = '';
+			}
+		});
+
+		socket.on('message', (data) => {
+            const {name, balance} = data.data;
+
+			if (data.success) responseMessageRender(name, balance);
+		});
+		socket.on('error', (data) => {
+		    errorMessageRender(data.message);
+        });
+		socket.on('person message', (data) => {
+			personMessageRender(data.data);
+        });
+
+		const userCountElem = document.querySelector('.user-count');
+		socket.on('user count', (data) => {
+			userCountElem.innerHTML = `Socket connections: ${data}`;
+        });
+
+
+		function mineMessageRender(value) {
+			chatWindow.innerHTML += `
+			    <div class="message-shell message--mine">
+                    <div class="message message--blue">
+                        <p>${value}</p>
+                    </div>
+                </div>
+			`;
+        }
+		function personMessageRender(value) {
+			chatWindow.innerHTML += `
+			    <div class="message-shell">
+                    <div class="message message--green">
+                        <p>${value}</p>
+                    </div>
+                </div>
+			`;
+        }
+		function responseMessageRender(name, balance) {
+			chatWindow.innerHTML += `
+			    <div class="message-shell">
+                    <div class="message">
+                        <p>Імʼя:</p>
+                        <p class="saldo">${name}</p>
+                    </div>
+                </div>
+                <div class="message-shell">
+                    <div class="message">
+                        <p>Сальдо:</p>
+                        <p class="saldo">${balance}</p>
+                    </div>
+                </div>
+			`;
+        }
+		function errorMessageRender(value) {
+			chatWindow.innerHTML += `
+			    <div class="message-shell">
+                    <div class="message message--error">
+                        <p>${value}</p>
+                    </div>
+                </div>
+			`;
+        }
     </script>
 </body>
 </html>
